fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body {
   color: #e9ecef;
 }
 
+main {
+  overflow: hidden;
+}
+
 /** Hero Section */
 
 .hero-bg {
